# wealth-watcher-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
api/: users.py
app/: auth.py  config.py  database.py  main.py  models.py
app/api/: ping.py  users-old.py  users.py
app/templates/: base.html
app/tests/: test_main.py
app/views/: index.py
data/: users.json
docker/fastapi/: Dockerfile
templates/: index.html
views/: index.py
