[tool.poetry]
name = "wealth-watcher-api"
version = "0.1.0"
description = ""
authors = ["Mehmet Tecer <mehmettecer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
sqlmodel = {git = "https://github.com/honglei/sqlmodel.git"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
